--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "lint:fix": "eslint --fix --ext .js ."
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^4.5.2",
+    "jquery": "1.9.1",
     "moment": "^2.27.0",
     "next": "^9.5.3",
+    "node-sass": "^4.14.1",
+    "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "sass": "^1.26.10",
+    "styled-jsx-plugin-sass": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.8.1",
