--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .js .",
-    "lint:fix": "eslint --fix --ext .js ."
+    "lint:fix": "eslint --fix --ext .js  .",
+    "plint": "npx prettier --write ."
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -34,7 +35,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "prettier": "^2.1.1",
+    "prettier": "2.1.1",
     "prettier-eslint": "^11.0.0",
     "prettier-eslint-cli": "^5.0.0"
   }
